# UH_DevOpsKubernetes

./: .gitignore  README.md  kustomization.yaml
.github/workflows/: main.yaml
Exercise1_01/: Exercise1_01.txt
Exercise1_01/source_cpp/: CMakeLists.txt  Dockerfile  main.cpp  workspace.code-workspace
Exercise1_01/source_py/: Dockerfile  logoutput.py
Exercise1_01/source_sh/: Dockerfile  logoutput.sh
Exercise1_02/: .env  Dockerfile  docker-compose.yml
Exercise1_03/: Exercise1_03.txt
Exercise1_03/manifests/: deployment.yaml
Exercise1_04/: Dockerfile
Exercise1_04/manifests/: deployment.yaml
Exercise1_04/myscript/: myscript.sh
Exercise1_04/static-html-directory/: index.html
Exercise1_06/: Exercise1_06.txt
Exercise1_06/manifests/: deployment.yaml
Exercise1_07/: Exercise1_07.txt
Exercise1_08/: Exercise1_08.txt
Exercise1_09/: Exercise1_09.txt
Exercise1_10/: Exercise1_10.txt
Exercise1_11/: Exercise1_11.txt
Exercise1_12/: Exercise1_12.txt
Exercise1_13/: Exercise1_13.txt
Exercise1_13/test/: .env  (+2 more)
Exercise2_01/: Exercise2_01.txt
Exercise2_02/: Exercise2_02.txt
Exercise2_03/: Exercise2_03.txt
Exercise2_04/: Exercise2_04.txt
Exercise2_06/: Exercise2_06.txt
Exercise2_07/: Exercise2_07.txt
Exercise2_08/: Exercise2_08.txt
Exercise2_09/: Exercise2_09.txt
Exercise3_01/: Exercise3_01.txt
Exercise3_02/: Exercise3_02.txt
Exercise3_03/: kustomization.yaml
Exercise3_04/: README.md  kustomization.yaml
Exercise3_07/: .gitignore  Exercise3_07.txt  LEANmain.yaml  README.md  init.sql  kustomization.yaml  main.yaml  secret.enc.yaml
(+212 files in other folders)
